ws-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-app
  namespace: default
spec:
  selector:
    app: ws-app
  ports:
    - name: http
      port: 80
      #protocol: TCP
      targetPort: 8010
